Fix alignment on tablet and above

--- a/working/index.css
+++ b/working/index.css
@@ -113,7 +113,7 @@ h3 {
     flex-direction: column;
     align-items: center;
     width: 327px;
-    margin-bottom: 144px;
+    margin-bottom: 144px; /* Only needed on mobile */
 }
 
 .hero h1 {
@@ -167,6 +167,10 @@ h3 {
         flex-shrink: 0;
         position: relative;
         /*left: -60px;*/
+    }
+
+    .hero-content-box {
+        margin-bottom: unset; /* Only needed on mobile */
     }
 
     .hero-image-right {
